--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
                         Camera Height: <span class="range-value" id="heightValue">1.5</span>
                     </label>
                     <input type="range" id="cameraHeight" min="0" max="5" step="0.1" value="1.5">
+
+                    <label for="lightIntensity" style="margin-top: 15px;">
+                        Light Intensity: <span class="range-value" id="lightValue">1.0</span>
+                    </label>
+                    <input type="range" id="lightIntensity" min="0" max="3" step="0.1" value="1.0">
                 </div>
 
                 <div class="control-group">
@@ -91,6 +96,7 @@
 
     <!-- Third-party libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/FBXLoader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/STLLoader.js"></script>
