--- a/index.html
+++ b/index.html
@@ -38,17 +38,25 @@
                         Animation Time: <span class="range-value" id="timeValue">0.0s</span>
                     </label>
                     <input type="range" id="animationTime" min="0" max="1" step="0.01" value="0" disabled>
+
+                    <label for="animationFrames" style="margin-top: 15px;">
+                        Animation Frames (for sprite generation):
+                    </label>
+                    <input type="number" id="animationFrames" value="1" min="1" max="32" step="1">
+                    <div class="info-box">
+                        Set to 1 for static pose, or higher (e.g. 4-8) to capture animation frames for each direction
+                    </div>
                 </div>
 
                 <div class="control-group">
                     <h3>🎨 Render Settings</h3>
                     <label for="spriteSize">Sprite Size (px):</label>
-                    <input type="number" id="spriteSize" value="256" min="64" max="2048" step="64">
+                    <input type="number" id="spriteSize" value="512" min="64" max="2048" step="64">
 
                     <label for="cameraDistance" style="margin-top: 15px;">
-                        Camera Distance: <span class="range-value" id="distanceValue">5.0</span>
+                        Camera Distance: <span class="range-value" id="distanceValue">3.0</span>
                     </label>
-                    <input type="range" id="cameraDistance" min="1" max="20" step="0.5" value="5">
+                    <input type="range" id="cameraDistance" min="1" max="20" step="0.5" value="3">
 
                     <label for="cameraHeight" style="margin-top: 15px;">
                         Camera Height: <span class="range-value" id="heightValue">1.5</span>
@@ -56,9 +64,15 @@
                     <input type="range" id="cameraHeight" min="0" max="5" step="0.1" value="1.5">
 
                     <label for="lightIntensity" style="margin-top: 15px;">
-                        Light Intensity: <span class="range-value" id="lightValue">1.0</span>
+                        Light Intensity: <span class="range-value" id="lightValue">3.0</span>
                     </label>
-                    <input type="range" id="lightIntensity" min="0" max="3" step="0.1" value="1.0">
+                    <input type="range" id="lightIntensity" min="0" max="10" step="0.1" value="3.0">
+
+                    <label for="directionCount" style="margin-top: 15px;">Direction Count:</label>
+                    <select id="directionCount">
+                        <option value="8">8 Directions</option>
+                        <option value="16">16 Directions</option>
+                    </select>
                 </div>
 
                 <div class="control-group">
@@ -91,6 +105,15 @@
 
         <div class="sprite-preview" id="spritePreview" style="display: none;">
             <!-- Sprites will be inserted here -->
+        </div>
+    </div>
+
+    <!-- Modal for sprite zoom -->
+    <div class="sprite-modal" id="spriteModal">
+        <div class="sprite-modal-content">
+            <span class="sprite-modal-close" id="modalClose">&times;</span>
+            <img id="modalImage" src="" alt="Sprite preview">
+            <p id="modalCaption"></p>
         </div>
     </div>
 
