feat: add favicon to enhance branding
- Included a custom SVG favicon for the application to improve visual identity in browser tabs.

This change enhances the overall user experience by providing a recognizable icon for the application.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D Model to 8-Directional Sprite Generator</title>
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cdefs%3E%3ClinearGradient id='grad' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%23667eea;stop-opacity:1' /%3E%3Cstop offset='100%25' style='stop-color:%23764ba2;stop-opacity:1' /%3E%3C/linearGradient%3E%3C/defs%3E%3Cpath fill='url(%23grad)' d='M50 10 L85 30 L85 70 L50 90 L15 70 L15 30 Z'/%3E%3Cpath fill='%23fff' opacity='0.3' d='M50 10 L85 30 L50 50 Z'/%3E%3Cpath fill='%23fff' opacity='0.5' d='M50 50 L85 30 L85 70 L50 90 Z'/%3E%3Cpath fill='%23fff' opacity='0.7' d='M50 50 L15 30 L15 70 L50 90 Z'/%3E%3C/svg%3E">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
