feat: enhance sprite generation and animation handling
- Introduced AnimationFrameCalculator for improved frame timing calculations during sprite generation.
- Refactored animation handling in AnimationController to utilize a configuration constant for procedural animation indexing.
- Updated sprite generation logic to incorporate animation duration and progress calculations.
- Added new Sprite class to encapsulate sprite data and naming logic, ensuring consistent file naming.
- Enhanced UIController to validate input values for sprite size, camera distance, and animation selection.

These changes improve the accuracy and efficiency of sprite generation while enhancing user experience through better input validation and consistent naming conventions.

--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
 
     <!-- Application modules (order matters) -->
     <script src="js/config.js"></script>
+    <!-- Utility classes (no dependencies) -->
+    <script src="js/sprite.js"></script>
+    <script src="js/animation-frame-calculator.js"></script>
+    <!-- Core modules -->
     <script src="js/ui-controller.js"></script>
     <script src="js/three-setup.js"></script>
     <script src="js/model-loader.js"></script>
