--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🎮 3D Model to Sprite Generator</h1>
-            <p>Load 3D models and create 8-directional sprites</p>
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+                <div>
+                    <h1>🎮 3D Model to Sprite Generator</h1>
+                    <p>Load 3D models and create 8-directional sprites</p>
+                </div>
+                <div style="display: flex; gap: 10px;">
+                    <button id="undoBtn" class="header-btn" disabled title="Undo (Ctrl+Z)">↶ Undo</button>
+                    <button id="redoBtn" class="header-btn" disabled title="Redo (Ctrl+Shift+Z)">↷ Redo</button>
+                </div>
+            </div>
         </div>
 
         <div class="main-content">
@@ -242,6 +250,94 @@
                 </div>
 
                 <div class="control-group">
+                    <h3>🎯 Gizmo Controls</h3>
+                    <div class="info-box" style="margin-bottom: 10px;">
+                        Interactive 3D gizmos for precise control of camera, character, and equipment positioning.
+                    </div>
+
+                    <div style="margin-bottom: 10px; display: flex; align-items: center; gap: 10px;">
+                        <input type="checkbox" id="enableGizmo" style="width: auto;">
+                        <label for="enableGizmo" style="margin: 0; cursor: pointer;">
+                            ✨ Enable Gizmo
+                        </label>
+                    </div>
+
+                    <label for="gizmoTarget">Control Target:</label>
+                    <select id="gizmoTarget" disabled>
+                        <option value="">Select target...</option>
+                        <option value="character">🧍 Character</option>
+                        <option value="equipment">⚔️ Equipment</option>
+                    </select>
+                    <div class="info-box" style="margin-top: 5px; font-size: 0.85em;">
+                        📷 Camera gizmo always visible in top-right corner
+                    </div>
+
+                    <div id="equipmentGizmoSelect" style="margin-top: 10px; display: none;">
+                        <label for="gizmoEquipmentSlot">Equipment Item:</label>
+                        <select id="gizmoEquipmentSlot" disabled>
+                            <option value="">Select equipped item...</option>
+                        </select>
+                    </div>
+
+                    <label style="margin-top: 15px;">Transform Mode:</label>
+                    <div style="display: flex; gap: 5px; margin-top: 5px;">
+                        <button id="gizmoModeTranslate" class="gizmo-mode-btn active" disabled>📍 Move</button>
+                        <button id="gizmoModeRotate" class="gizmo-mode-btn" disabled>🔄 Rotate</button>
+                        <button id="gizmoModeScale" class="gizmo-mode-btn" disabled>📏 Scale</button>
+                    </div>
+                </div>
+
+                <div class="control-group">
+                    <h3>📷 Camera Controls</h3>
+                    <div class="info-box" style="margin-bottom: 10px;">
+                        Fine-tune all camera parameters. View angles shown in top-right gizmo.
+                    </div>
+
+                    <details open>
+                        <summary style="cursor: pointer; user-select: none; font-weight: bold;">🎯 Position & Target</summary>
+                        <div style="margin-top: 10px;">
+                            <label>Target X: <span id="targetXValue">0.00</span></label>
+                            <input type="range" id="targetX" min="-10" max="10" step="0.1" value="0">
+
+                            <label style="margin-top: 5px;">Target Y: <span id="targetYValue">0.00</span></label>
+                            <input type="range" id="targetY" min="-10" max="10" step="0.1" value="0">
+
+                            <label style="margin-top: 5px;">Target Z: <span id="targetZValue">0.00</span></label>
+                            <input type="range" id="targetZ" min="-10" max="10" step="0.1" value="0">
+
+                            <hr style="margin: 10px 0; border: 1px solid #444;">
+
+                            <label>Camera X: <span id="cameraPosXValue">3.00</span></label>
+                            <input type="range" id="cameraPosX" min="-20" max="20" step="0.1" value="3">
+
+                            <label style="margin-top: 5px;">Camera Y: <span id="cameraPosYValue">1.50</span></label>
+                            <input type="range" id="cameraPosY" min="-10" max="10" step="0.1" value="1.5">
+
+                            <label style="margin-top: 5px;">Camera Z: <span id="cameraPosZValue">3.00</span></label>
+                            <input type="range" id="cameraPosZ" min="-20" max="20" step="0.1" value="3">
+                        </div>
+                    </details>
+
+                    <details style="margin-top: 10px;">
+                        <summary style="cursor: pointer; user-select: none; font-weight: bold;">📐 Camera Properties</summary>
+                        <div style="margin-top: 10px;">
+                            <label>FOV (Field of View): <span id="fovValue">45</span>°</label>
+                            <input type="range" id="fov" min="10" max="120" step="1" value="45">
+
+                            <label style="margin-top: 10px;">Near Plane: <span id="nearValue">0.1</span></label>
+                            <input type="range" id="nearPlane" min="0.01" max="1" step="0.01" value="0.1">
+
+                            <label style="margin-top: 10px;">Far Plane: <span id="farValue">1000</span></label>
+                            <input type="range" id="farPlane" min="100" max="5000" step="100" value="1000">
+                        </div>
+                    </details>
+
+                    <button id="resetCameraBtn" style="margin-top: 10px; background: #dc3545;">
+                        🔄 Reset to Default
+                    </button>
+                </div>
+
+                <div class="control-group">
                     <h3>📸 Generate Sprites</h3>
                     <button id="generateBtn" disabled>Generate 8-Direction Sprites</button>
                     <button id="downloadBtn" disabled>Download ZIP Archive</button>
@@ -356,6 +452,7 @@
     <!-- Third-party libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/TransformControls.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
     <!-- fflate is required for FBX loader to decompress FBX files -->
     <script src="https://cdn.jsdelivr.net/npm/fflate@0.7.4/umd/index.js"></script>
@@ -370,12 +467,14 @@
     <script src="js/sprite.js"></script>
     <script src="js/animation-frame-calculator.js"></script>
     <script src="js/animation-library.js"></script>
+    <script src="js/undo-manager.js"></script>
     <!-- Core modules -->
     <script src="js/ui-controller.js"></script>
     <script src="js/three-setup.js"></script>
     <script src="js/model-loader.js"></script>
     <script src="js/animation-controller.js"></script>
     <script src="js/equipment-manager.js"></script>
+    <script src="js/gizmo-controller.js"></script>
     <script src="js/sprite-generator.js"></script>
     <script src="js/file-handler.js"></script>
     <script src="js/app.js"></script>
