--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <div class="control-group">
                     <h3>🔧 Quick Rotation Test</h3>
                     <div class="info-box" style="margin-bottom: 10px;">
-                        Test rotation per axis (0, ±90, ±180, ±270). Click value to set, animation updates immediately.
+                        <strong>Rotate the loaded 3D model</strong> to test different orientations. Click values to apply rotation per axis. Great for finding the perfect angle before sprite generation!
                     </div>
 
                     <div style="background: #1a1a2e; padding: 10px; border-radius: 5px; margin-bottom: 10px; font-size: 12px;">
@@ -288,53 +288,76 @@
                 </div>
 
                 <div class="control-group">
-                    <h3>📷 Camera Controls</h3>
-                    <div class="info-box" style="margin-bottom: 10px;">
-                        Fine-tune all camera parameters. View angles shown in top-right gizmo.
+                    <h3>📐 Camera Properties</h3>
+                    <div class="info-box" style="margin-bottom: 15px;">
+                        Precise camera transform control. All 9 parameters with reset to defaults.
+                    </div>
+
+                    <!-- Camera Angles Display -->
+                    <div style="background: #1a1a2e; padding: 12px; border-radius: 8px; margin-bottom: 15px; font-family: 'Courier New', monospace; font-size: 14px;">
+                        <div style="display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 8px; text-align: center;">
+                            <div style="background: rgba(255, 59, 48, 0.2); padding: 8px; border-radius: 4px;">
+                                <div style="color: #ff6b6b; font-size: 11px; margin-bottom: 4px;">PITCH</div>
+                                <div style="color: #fff; font-size: 16px; font-weight: bold;"><span id="cameraPitch">0</span>°</div>
+                            </div>
+                            <div style="background: rgba(52, 199, 89, 0.2); padding: 8px; border-radius: 4px;">
+                                <div style="color: #51cf66; font-size: 11px; margin-bottom: 4px;">YAW</div>
+                                <div style="color: #fff; font-size: 16px; font-weight: bold;"><span id="cameraYaw">0</span>°</div>
+                            </div>
+                            <div style="background: rgba(10, 132, 255, 0.2); padding: 8px; border-radius: 4px;">
+                                <div style="color: #4dabf7; font-size: 11px; margin-bottom: 4px;">ROLL</div>
+                                <div style="color: #fff; font-size: 16px; font-weight: bold;"><span id="cameraRoll">0</span>°</div>
+                            </div>
+                        </div>
                     </div>
 
                     <details open>
-                        <summary style="cursor: pointer; user-select: none; font-weight: bold;">🎯 Position & Target</summary>
-                        <div style="margin-top: 10px;">
-                            <label>Target X: <span id="targetXValue">0.00</span></label>
-                            <input type="range" id="targetX" min="-10" max="10" step="0.1" value="0">
+                        <summary style="cursor: pointer; user-select: none; font-weight: bold; margin-bottom: 15px;">📍 Position</summary>
 
-                            <label style="margin-top: 5px;">Target Y: <span id="targetYValue">0.00</span></label>
-                            <input type="range" id="targetY" min="-10" max="10" step="0.1" value="0">
+                        <label>Position X: <span id="camPosXValue">3.00</span></label>
+                        <input type="range" id="camPosX" min="-20" max="20" step="0.1" value="3">
 
-                            <label style="margin-top: 5px;">Target Z: <span id="targetZValue">0.00</span></label>
-                            <input type="range" id="targetZ" min="-10" max="10" step="0.1" value="0">
+                        <label style="margin-top: 5px;">Position Y: <span id="camPosYValue">1.50</span></label>
+                        <input type="range" id="camPosY" min="-10" max="10" step="0.1" value="1.5">
 
-                            <hr style="margin: 10px 0; border: 1px solid #444;">
-
-                            <label>Camera X: <span id="cameraPosXValue">3.00</span></label>
-                            <input type="range" id="cameraPosX" min="-20" max="20" step="0.1" value="3">
-
-                            <label style="margin-top: 5px;">Camera Y: <span id="cameraPosYValue">1.50</span></label>
-                            <input type="range" id="cameraPosY" min="-10" max="10" step="0.1" value="1.5">
-
-                            <label style="margin-top: 5px;">Camera Z: <span id="cameraPosZValue">3.00</span></label>
-                            <input type="range" id="cameraPosZ" min="-20" max="20" step="0.1" value="3">
-                        </div>
+                        <label style="margin-top: 5px;">Position Z: <span id="camPosZValue">3.00</span></label>
+                        <input type="range" id="camPosZ" min="-20" max="20" step="0.1" value="3">
                     </details>
 
-                    <details style="margin-top: 10px;">
-                        <summary style="cursor: pointer; user-select: none; font-weight: bold;">📐 Camera Properties</summary>
-                        <div style="margin-top: 10px;">
-                            <label>FOV (Field of View): <span id="fovValue">45</span>°</label>
-                            <input type="range" id="fov" min="10" max="120" step="1" value="45">
+                    <details open style="margin-top: 10px;">
+                        <summary style="cursor: pointer; user-select: none; font-weight: bold; margin-bottom: 15px;">🔄 Rotation</summary>
 
-                            <label style="margin-top: 10px;">Near Plane: <span id="nearValue">0.1</span></label>
-                            <input type="range" id="nearPlane" min="0.01" max="1" step="0.01" value="0.1">
+                        <label>Rotation X: <span id="camRotXValue">0</span>°</label>
+                        <input type="range" id="camRotX" min="-180" max="180" step="1" value="0">
 
-                            <label style="margin-top: 10px;">Far Plane: <span id="farValue">1000</span></label>
-                            <input type="range" id="farPlane" min="100" max="5000" step="100" value="1000">
-                        </div>
+                        <label style="margin-top: 5px;">Rotation Y: <span id="camRotYValue">0</span>°</label>
+                        <input type="range" id="camRotY" min="-180" max="180" step="1" value="0">
+
+                        <label style="margin-top: 5px;">Rotation Z: <span id="camRotZValue">0</span>°</label>
+                        <input type="range" id="camRotZ" min="-180" max="180" step="1" value="0">
                     </details>
 
-                    <button id="resetCameraBtn" style="margin-top: 10px; background: #dc3545;">
-                        🔄 Reset to Default
-                    </button>
+                    <details open style="margin-top: 10px;">
+                        <summary style="cursor: pointer; user-select: none; font-weight: bold; margin-bottom: 15px;">📏 Scale / Zoom</summary>
+
+                        <label>Scale X: <span id="camScaleXValue">1.00</span>x</label>
+                        <input type="range" id="camScaleX" min="0.1" max="5" step="0.1" value="1">
+
+                        <label style="margin-top: 5px;">Scale Y: <span id="camScaleYValue">1.00</span>x</label>
+                        <input type="range" id="camScaleY" min="0.1" max="5" step="0.1" value="1">
+
+                        <label style="margin-top: 5px;">Scale Z (Zoom): <span id="camScaleZValue">1.00</span>x</label>
+                        <input type="range" id="camScaleZ" min="0.1" max="5" step="0.1" value="1">
+                    </details>
+
+                    <div style="margin-top: 15px; display: flex; gap: 10px;">
+                        <button id="pointToCenterBtn" style="flex: 1; background: #28a745;">
+                            🎯 Point to Center
+                        </button>
+                        <button id="resetCameraBtn" style="flex: 1; background: #dc3545;">
+                            🔄 Reset All
+                        </button>
+                    </div>
                 </div>
 
                 <div class="control-group">
